--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
     <div class="menu">
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/login.html">Login</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./login.html">Login</a></li>
             <li><a href="https://google.com">Google</a></li>
         </ul>
     </div>
