attempt 1 to fix meta tag LightHouse warning

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Budget</title>
+    <meta 
+        name="description" 
+        content="Personal Budget">
+    <meta name="author"
+        content="Prashant Pandey"/>
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./main.css">
 </head>
