added missing parts of semantics, a11y and seo

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </header>
     <!-- This is a Semantic HTML Change --> <!-- This is an A11y Change -->
     <main class="container center" id="main-container" role="main">
+         <!-- This is an A11y Change -->
         <div class="page-area" role="presentation">
             <!-- This is a Semantic HTML Change --> <!-- This is an SEO Change -->
             <article class="text-box" itemprop="additionalProperty" itemscope itemtype="https://schema.org/PropertyValue">
