--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="description" content="The app that lets you manage your personal budget">
     <meta property="og:title" content="Personal Budget" />
     <meta property="og:image" content="./bg.png" />
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" media="print" href="./reset.css" onload="this.media = 'all'">
+    <link rel="stylesheet" media="print" href="./main.css"  onload="this.media = 'all'">
 </head>
 
 <body>
