Added server, Axios, and ChartJS

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
     <meta property="og:title" content="Personal Budget" />
     <meta property="og:image" content="./bg.png" />
     <link rel="stylesheet" media="print" href="./reset.css" onload="this.media = 'all'">
-    <link rel="stylesheet" media="print" href="./main.css"  onload="this.media = 'all'">
+    <link rel="stylesheet" media="print" href="./main.css" onload="this.media = 'all'">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css' />
 </head>
 
 <body>
@@ -28,18 +29,23 @@
                 <li><a href="https://google.com">Google</a></li>
             </ul>
         </nav>
-        <!-- This is a Semantic HTML Change --> <!-- This is an SEO Change --> <!-- This is an A11y Change -->
+        <!-- This is a Semantic HTML Change -->
+        <!-- This is an SEO Change -->
+        <!-- This is an A11y Change -->
         <section class="hero" itemscope itemtype="https://schema.org/Product" role="heading">
             <h1 itemprop="name">Personal Budget</h1>
-            <h2  itemprop="description">A personal-budget management app</h2>
+            <h2 itemprop="description">A personal-budget management app</h2>
         </section>
     </header>
-    <!-- This is a Semantic HTML Change --> <!-- This is an A11y Change -->
+    <!-- This is a Semantic HTML Change -->
+    <!-- This is an A11y Change -->
     <main class="container center" id="main-container" role="main">
-         <!-- This is an A11y Change -->
+        <!-- This is an A11y Change -->
         <div class="page-area" role="presentation">
-            <!-- This is a Semantic HTML Change --> <!-- This is an SEO Change -->
-            <article class="text-box" itemprop="additionalProperty" itemscope itemtype="https://schema.org/PropertyValue">
+            <!-- This is a Semantic HTML Change -->
+            <!-- This is an SEO Change -->
+            <article class="text-box" itemprop="additionalProperty" itemscope
+                itemtype="https://schema.org/PropertyValue">
                 <h1 itemprop="name">Stay on track</h1>
                 <p itemprop="value">
                     Do you know where you are spending your money? If you really stop to track it down,
@@ -47,15 +53,19 @@
                     app will help you with that!
                 </p>
             </article>
-            <!-- This is a Semantic HTML Change --> <!-- This is an SEO Change -->
-            <article class="text-box" itemprop="additionalProperty" itemscope itemtype="https://schema.org/PropertyValue">
+            <!-- This is a Semantic HTML Change -->
+            <!-- This is an SEO Change -->
+            <article class="text-box" itemprop="additionalProperty" itemscope
+                itemtype="https://schema.org/PropertyValue">
                 <h1 itemprop="name">Alerts</h1>
                 <p itemprop="value">
                     What if your clothing budget ended? You will get an alert. The goal is to never go over the budget.
                 </p>
             </article>
-            <!-- This is a Semantic HTML Change --> <!-- This is an SEO Change -->
-            <article class="text-box" itemprop="additionalProperty" itemscope itemtype="https://schema.org/PropertyValue">
+            <!-- This is a Semantic HTML Change -->
+            <!-- This is an SEO Change -->
+            <article class="text-box" itemprop="additionalProperty" itemscope
+                itemtype="https://schema.org/PropertyValue">
                 <h1 itemprop="name">Results</h1>
                 <p itemprop="value">
                     People who stick to a financial plan, budgeting every expense, get out of debt faster!
@@ -63,15 +73,19 @@
                     because they know it is all good and accounted for.
                 </p>
             </article>
-            <!-- This is a Semantic HTML Change --> <!-- This is an SEO Change -->
-            <article class="text-box" itemprop="additionalProperty" itemscope itemtype="https://schema.org/PropertyValue">
+            <!-- This is a Semantic HTML Change -->
+            <!-- This is an SEO Change -->
+            <article class="text-box" itemprop="additionalProperty" itemscope
+                itemtype="https://schema.org/PropertyValue">
                 <h1 itemprop="name">Free</h1>
                 <p itemprop="value">
                     This app is free!!! And you are the only one holding your data!
                 </p>
             </article>
-            <!-- This is a Semantic HTML Change --> <!-- This is an SEO Change -->
-            <article class="text-box" itemprop="additionalProperty" itemscope itemtype="https://schema.org/PropertyValue">
+            <!-- This is a Semantic HTML Change -->
+            <!-- This is an SEO Change -->
+            <article class="text-box" itemprop="additionalProperty" itemscope
+                itemtype="https://schema.org/PropertyValue">
                 <h1 itemprop="name">Stay on track</h1>
                 <p itemprop="value">
                     Do you know where you are spending your money? If you really stop to track it down,
@@ -79,15 +93,19 @@
                     app will help you with that!
                 </p>
             </article>
-            <!-- This is a Semantic HTML Change --> <!-- This is an SEO Change -->
-            <article class="text-box" itemprop="additionalProperty" itemscope itemtype="https://schema.org/PropertyValue">
+            <!-- This is a Semantic HTML Change -->
+            <!-- This is an SEO Change -->
+            <article class="text-box" itemprop="additionalProperty" itemscope
+                itemtype="https://schema.org/PropertyValue">
                 <h1 itemprop="name">Alerts</h1>
                 <p itemprop="value">
                     What if your clothing budget ended? You will get an alert. The goal is to never go over the budget.
                 </p>
             </article>
-            <!-- This is a Semantic HTML Change --> <!-- This is an SEO Change -->
-            <article class="text-box" itemprop="additionalProperty" itemscope itemtype="https://schema.org/PropertyValue">
+            <!-- This is a Semantic HTML Change -->
+            <!-- This is an SEO Change -->
+            <article class="text-box" itemprop="additionalProperty" itemscope
+                itemtype="https://schema.org/PropertyValue">
                 <h1 itemprop="name">Results</h1>
                 <p itemprop="value">
                     People who stick to a financial plan, budgeting every expense, get out of debt faster!
@@ -95,11 +113,13 @@
                     because they know it is all good and accounted for.
                 </p>
             </article>
-            <!-- This is a Semantic HTML Change --> <!-- This is an SEO Change -->
-            <article class="text-box" itemprop="additionalProperty" itemscope itemtype="https://schema.org/PropertyValue">
-                <h1 itemprop="name">Free</h1>
+            <!-- This is a Semantic HTML Change -->
+            <!-- This is an SEO Change -->
+            <article class="text-box" itemprop="additionalProperty" itemscope
+                itemtype="https://schema.org/PropertyValue">
+                <h1 itemprop="name">Chart</h1>
                 <p itemprop="value">
-                    This app is free!!! And you are the only one holding your data!
+                    <canvas id="myChart" height="300" width="400"></canvas>
                 </p>
             </article>
 
@@ -113,7 +133,42 @@
             All rights reserved &copy; Prashant Pandey
         </div>
     </footer>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.2.0/axios.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js'></script>
+    <script>
+        const data = {
+            datasets: [{
+                data: [100, 350, 90],
+                backgroundColor:['#ffcd56','#ff6384','#36a2eb', '#fd6b19']
+            }],
 
+            // These labels appear in the legend and in the tooltips when hovering different arcs
+            labels: [
+                'Eat out',
+                'Rent',
+                'Groceries'
+            ]
+        };
+
+        const createChart = ()=>{
+            const ctx = document.getElementById('myChart').getContext('2d');
+            const myPieChart = new Chart(ctx, {type:'pie', data});
+        }
+
+        const getBudget = ()=>{
+            axios.get('/budget').then((res)=>{
+                console.log(res.data);
+                for (let i = 0; i < res.data.length; i++) {
+                    data.datasets[0].data[i] = res.data[i].budget;
+                    data.labels[i] = res[i].title;
+                }
+            })
+        }
+
+        getBudget();
+
+        createChart();
+    </script>
 </body>
 
 </html>
